# Chemical_treatment-

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: manage.py
backend/api/v1/: urls.py
backend/backend/: settings.py  urls.py  wsgi.py
backend/chemicals/: admin.py  models.py  schemas.py  services.py  urls.py
backend/chemicals/migrations/: 0001_initial.py  0002_requestlog_user.py  0003_chemicalcompound.py  0004_delete_chemicalcompound.py  0005_requestlog_description.py  0006_remove_requestlog_description.py  0007_remove_ip_address.py
backend/chemicals/serializers/: __init__.py  auth.py  chemical.py
backend/chemicals/services/: __init__.py  chemical_renderer.py  logging.py
backend/chemicals/templates/chemicals/: index.html
backend/chemicals/views/: __init__.py  auth.py  chemical.py
infra/: nginx.conf
