[tool.poetry]
name = "chemical treatment"
version = "0.1.0"
description = "Chemical structure rendering service"
authors = ["DPavlen"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.15"
django-spectacular = "^0.27"
indigo-python = "^1.5.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
ruff = "^0.1.11"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"